--- a/sensor-5-niveis-rele.yaml
+++ b/sensor-5-niveis-rele.yaml
@@ -4,7 +4,7 @@ substitutions:
   room: ""
   device_description: "Sensor de 5 Niveis com relê"
   project_name: "Automakaza.Sensor 5 Niveis V2"
-  project_version: "2.02"
+  project_version: "2.03"
   relay_restore_mode: RESTORE_DEFAULT_OFF
 
 esphome:
@@ -54,7 +54,7 @@ select:
      - "60 %"
      - "80 %"
      - "100 %"
-    initial_option: "20 %"
+#    initial_option: "0 %"
     restore_value: True
     optimistic: True
 
@@ -68,7 +68,7 @@ select:
      - "60 %"
      - "80 %"
      - "100 %"
-    initial_option: "80 %"
+#    initial_option: "80 %"
     restore_value: True
     optimistic: True
 
