--- a/sensor-5-niveis-rele.yaml
+++ b/sensor-5-niveis-rele.yaml
@@ -54,7 +54,7 @@ select:
      - "60 %"
      - "80 %"
      - "100 %"
-    initial_option: "20 %"
+#    initial_option: "0 %"
     restore_value: True
     optimistic: True
 
@@ -68,7 +68,7 @@ select:
      - "60 %"
      - "80 %"
      - "100 %"
-    initial_option: "80 %"
+#    initial_option: "80 %"
     restore_value: True
     optimistic: True
 
